--- a/css/styles.css
+++ b/css/styles.css
@@ -13,8 +13,11 @@
     font-size: 1.5rem;
 }
 .navbar .navbar-brand {
-    color: #fd7a00;
+    color: #fd7a00 !important;
     font-size: 2rem;
+}
+.navbar .navbar-brand:hover {
+    color: #fff !important;
 }
 .navbar li:hover {
     border-bottom: 2px solid #fd7a00;
@@ -149,9 +152,9 @@
   }
 
   .carousel-control-next, .carousel-control-prev {
-      border: 2px solid black;
+      border: 2px solid black !important;
       height: 50px;
-      background: #000;
+      background: #000 !important;
       margin: auto;
 }
 .carousel .content-banner {
@@ -210,7 +213,6 @@
     background: #ff6600;
 }
 
-
 .subscription {
     background-color: #dfdfdf;
 }
@@ -236,12 +238,10 @@
     background: #ff6600;
 }
 
-
-
 /* SHOP SECTION */
 .shop-banner {
     background: url(../img/shop.jpg) no-repeat center center/cover;
-    height: 450px;
+    height: 600px;
 }
 .shop-banner h1 {
     font-size: 4rem;
@@ -255,9 +255,96 @@
     color: #fd7a00 !important;
 }
 .btn-warning {
-    background: #fd7a00;
+    background: #fd7a00 !important;
 }
 .btn-warning:hover {
+    background: #ff6600 !important;
+}
+
+
+/* SERVICES SECTION */
+.services-banner {
+    background: url(../img/services.jpeg) no-repeat center center/cover;
+    height: 600px;
+}
+.services-banner h1 {
+    font-size: 4rem;
+    color: #fff;
+}
+.services-banner span {
+    color: #fd7a00;
+}
+
+/* MEMBERSHIP SECTION */
+.member-banner {
+    background: url(../img/membership.jpg) no-repeat center center/cover;
+    height: 600px;
+}
+.member-banner h1 {
+    font-size: 4rem;
+    color: #fff;
+}
+
+.join-flex-left h3 {
+    font-size: 2.5rem;
+}
+.join-flex-left span {
+    color: #fd7a00;
+}
+.join-flex-left p {
+    font-size: 1.5rem;
+}
+
+.join-flex-right h3 {
+    font-size: 2.5rem;
+}
+.join-flex-right input {
+    width: 300px;
+    height: 41px;
+}
+.join-flex-right button {
+    display: inline-block;
+    color: #fff;
+    background: #000;
+    padding: 0 30px;
+    line-height: 41px;
+    position: relative;
+    border: 2px solid #fff;
+    z-index: 1;
+    font-size: 14px;
+    letter-spacing: 1px;
+    -webkit-transition: all 0.3s ease;
+    transition: all 0.3s ease;
+}
+.join-flex-right button:hover {
+    cursor: pointer;
+    background: #ff6600;
+}
+
+/* CONTACT SECTION */
+.form h1 {
+    font-size: 3rem;
+    border-bottom: 2px solid #fd7a00;
+}
+.form input, textarea {
+    width: 300px;
+}
+.form button {
+    display: inline-block;
+    color: #fff;
+    background: #000;
+    padding: 0 30px;
+    line-height: 41px;
+    position: relative;
+    border: 2px solid #fff;
+    z-index: 1;
+    font-size: 14px;
+    letter-spacing: 1px;
+    -webkit-transition: all 0.3s ease;
+    transition: all 0.3s ease;
+}
+.form button:hover {
+    cursor: pointer;
     background: #ff6600;
 }
 
@@ -298,16 +385,17 @@
     }
 
     .promotion {
-        margin: 5rem;
         font-size: 1.5rem;
     }
-
-    
 
     .carousel {
         height: 945px;
     }
     .carousel .content-banner {
         height: 945px;
+    }
+
+    .form input, textarea {
+        width: 450px;
     }
 }
