--- a/css/style.css
+++ b/css/style.css
@@ -298,6 +298,29 @@
     cursor: pointer;
     background: #fd7a00; }
 
+.member-cards .card h2 {
+  border-bottom: 2px solid #fd7a00; }
+
+.member-cards .card .text-line {
+  border-bottom: 2px solid #000; }
+
+.member-cards .card .buttons {
+  display: inline-block;
+  color: #fff;
+  background: #000;
+  padding: 0 30px;
+  line-height: 41px;
+  position: relative;
+  border: 2px solid #fff;
+  z-index: 1;
+  font-size: 14px;
+  letter-spacing: 1px;
+  -webkit-transition: all 0.3s ease;
+  transition: all 0.3s ease; }
+  .member-cards .card .buttons:hover {
+    cursor: pointer;
+    background: #fd7a00; }
+
 /* CONTACT SECTION */
 .form h1 {
   font-size: 3rem;
