--- a/scss/sections/_index.scss
+++ b/scss/sections/_index.scss
@@ -41,48 +41,49 @@
 
 .sidebar {
     background: url(../img/training.jpg) no-repeat center center/cover;
-    height: 500px;
+    height: 600px;
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
     align-items: center;
-}
-.sidebar .sub-main-text {
-    padding-bottom: 2.5rem;
-}
-.sidebar .sub-main-text h3 {
-    font-size: 3rem;
-    font-family: 'Bebas Neue',  cursive;
-    color: #fff;
-    font-weight: 400;
-}
-.sidebar .sub-main-text h1 {
-    font-size: 4.5rem;
-    font-family: 'Bebas Neue',  cursive;
-    color: #fff;
-}
-
-.sidebar .sub-main-text button a {
-    color: #fff;
-    text-decoration: none;
+    .sub-main-text {
+        padding-bottom: 2.5rem;
+        h3 {
+            font-size: 3rem;
+            font-family: 'Bebas Neue',  cursive;
+            color: #fff;
+            font-weight: 400;
+        }
+        h1 {
+            font-size: 4.5rem;
+            font-family: 'Bebas Neue',  cursive;
+            color: #fff;
+        }
+        button {
+            a {
+                color: #fff;
+                text-decoration: none;
+            }
+        }
+    }
 }
 
 .twin1 {  
     background: url(../img/services.jpeg) no-repeat center center/cover;
-    height: 500px;
+    height: 600px;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
     align-items: flex-start;
+    .fitness-grupal {
+        padding-top: 4rem;
+        h1 {
+            font-size: 4rem;
+            color: $secondary-color;
+            font-weight: 400;
+        }
+    }
   }
-  .twin1 .fitness-grupal {
-    padding: 2rem;
-  }
-  .twin1 .fitness-grupal h1 {
-    font-size: 4rem;
-    color: $secondary-color;
-    font-weight: 400;
-}
 
 .row {
     display: flex;
@@ -108,22 +109,22 @@
     align-content: space-between;
     justify-content: center;
     align-items: center;
-  }
-  .promotion .icons {
-    display: flex;
-    flex-direction: column;
-  }
-  .promotion .icons p {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 2rem;
-  }
-  .promotion .icons p i {
-    color: rgb(0, 162, 255);
-    font-size: 2.5rem;
-    padding-bottom: 1rem;
-  }
+    .icons {
+        display: flex;
+        flex-direction: column;
+        p {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            padding: 2rem;
+            i {
+                color: rgb(0, 162, 255);
+                font-size: 2.5rem;
+                padding-bottom: 1rem;
+            }
+        }
+    }
+}
 
 .carousel-control-next, .carousel-control-prev {
       border: 2px solid black !important;
